--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "gsap-page",
+  "name": "pizza-gsap-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
+    "gsap": "^3.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
+  "homepage": "https://tolafandpro.github.io/pizzaanimation",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
